--- a/board/templates/posts/posts.html
+++ b/board/templates/posts/posts.html
@@ -7,8 +7,10 @@
 {% block content %}
   {% for post in posts %}
     <article>
-      <p class="message">{{ post["message"] }}<p>
-      <aside>Posted by {{ post["author"] }} on {{ post["created"].strftime("%b %d, %Y at %I:%M%p") }}</aside>
+      <p class="message">{{ post[1] }}</p>
+      <aside>Posted by {{ post[0] }} on {{ post[2] }}</aside>
     </article>
+  {% else %}
+    <p>No posts yet.</p>
   {% endfor %}
 {% endblock content %}
